fix spacing on theme section

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -190,9 +190,6 @@ body {
 
       .theme {
         width: 100%;
-        @media (min-width: $large-screen) {
-          margin-top: 50%;
-        }
         svg {
           width: 40%;
         }
